--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
                     <h4>My hometown is Dehradun.</h4>
                     <h4>My favorite color is Black.</h4>
                     <h4>My favorite food is momo.</h4>
-                    <h4>If I could be any animal, I would be a <body>
-                        <p style="color:#ff00ea";>jellyfish</p>
-                      </body></h4>
+                    <h4>If I could be any animal, I would be a jellyfish </h4>
+                    <p>*floating *floating *stings</p>
             </div>
           </body>
         </html>
