--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h3>About Me:</h3>
                     <h4>My hometown is Dehradun.</h4>
                     <h4>My favorite color is Black.</h4>
-                    <h4>My favorite food is momo.</h4>
+                    <h4>My favorite food is Little Caesar's Pepperoni Cheese Bread.</h4>
                     <h4>If I could be any animal, I would be a jellyfish </h4>
                     <p>*floating *floating *stings</p>
             </div>
